# recoll-xapian-helper

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: help.cpp  help.h  main.cpp
